fix info position mobile

--- a/components/bracket-challenge/player/player.module.scss
+++ b/components/bracket-challenge/player/player.module.scss
@@ -92,4 +92,7 @@ $width: 160px;
   .rowContainer {
     display: block;
   }
+  .infoButton {
+    left: -13px;
+  }
 }
